# batcher

./: README.md  pyproject.toml
batcher/: batcher.py
tests/: test_batcher.py
tests/testdata/: generate_testdata.py  should_filter_too_long_ascii_input.json  should_filter_too_long_special_characters_input.json  should_include_1mb_ascii_input.json  should_include_1mb_special_character_input.json
