[project]
name = "batcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
test = "pytest:main"
test-watch = "pytest_watch:main"